[package]
name = "bitbash"
version = "0.5.0"
authors = ["Alistair Geesing <alistair.geesing@icloud.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Macros for working with bitfields"
repository = "https://github.com/aalistairr/bitbash"
documentation = "https://docs.rs/bitbash"
keywords = ["bitfield", "bitenum", "bitflags"]
categories = ["development-tools"]

[dependencies]
bitbash-macros = { version = "=0.5.0", path = "../bitbash_macros" }

[features]
const = []
