[package]
name = "bitbash-macros"
version = "0.5.0"
authors = ["Alistair Geesing <alistair.geesing@icloud.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "proc-macro crate for bitbash"
repository = "https://github.com/aalistairr/bitbash"
keywords = ["bitfield", "bitenum", "bitflags"]
categories = ["development-tools"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
